<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alphadvlpr.infiniteminds.articles.NewArticle"
    android:background="?attr/backgroundColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/colorAccentLight"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/eat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:text="@string/edit_article_title"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editArticleTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:enabled="false"
                        android:textColor="@android:color/black"
                        android:inputType="textPersonName" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/colorAccentLight"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/eac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:text="@string/article_content"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editArticleContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:ems="10"
                        android:inputType="textMultiLine" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/colorAccentLight"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:text="@string/article_images"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/editArticleTakePicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/blueLight"
                        android:text="@string/article_take_picture"
                        android:textColor="@android:color/white" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/editArticleImagesList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:orientation="vertical" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/colorAccentLight"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:text="@string/article_links"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editArticleDownloadOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:hint="@string/article_download_link_1"
                        android:textColorHint="@color/backgroundColor"/>

                    <EditText
                        android:id="@+id/editArticleDownloadTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:hint="@string/article_download_link_2"
                        android:textColorHint="@color/backgroundColor"/>

                    <EditText
                        android:id="@+id/editArticleDownloadThree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/article_download_link_3"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editArticleDownloadFour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/article_download_link_4"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:inputType="textPersonName" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="6dp"
                app:cardBackgroundColor="@color/colorAccentLight"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:text="@string/article_categories"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editArticleCategoryOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/article_category_1"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editArticleCategoryTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/article_category_2"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editArticleCategoryThree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/article_category_3"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editArticleCategoryFour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/article_category_4"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editArticleCategoryFive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/article_category_5"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/editArticleCategorySix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/article_category_6"
                        android:textColorHint="@color/backgroundColor"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:inputType="textPersonName" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editArticleUpdateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/article_update"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/editArticleProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/editArticleCancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/article_cancel"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/editArticleDeleteArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/article_delete"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>